// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Split Button renders correctly 1`] = `
<div
  class="fd-button-split"
  role="group"
>
  <button
    class="fd-button"
  >
    Hello World
  </button>
   
  <button
    aria-label="More"
    class="fd-button sap-icon--slim-arrow-down fd-button"
  />
</div>
`;

exports[`Split Button when disabled renders correctly 1`] = `
<div
  class="fd-button-split"
  role="group"
>
  <button
    class="fd-button is-disabled"
    disabled="disabled"
  >
    Hello World
  </button>
   
  <button
    aria-label="More"
    class="fd-button sap-icon--slim-arrow-down fd-button is-disabled"
    disabled="disabled"
  />
</div>
`;
